--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   "author": "kih",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-arrow-functions": "^7.16.0",
+    "@babel/plugin-transform-block-scoping": "^7.16.0",
+    "@babel/plugin-transform-strict-mode": "^7.16.0",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.3",
     "react": "^17.0.2",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1"
