--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@babel/plugin-transform-arrow-functions": "^7.16.0",
     "@babel/plugin-transform-block-scoping": "^7.16.0",
     "@babel/plugin-transform-strict-mode": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^2.6.12",
     "css-loader": "^6.5.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
